
[package]
name = "quicpair"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[example]]
name = "terminal"

[features]
default = ["passphrase"]
passphrase = ["dep:flate2"]

[dependencies]
anyhow = "1.0.95"
flate2 = { version = "1.0.35", optional = true }
quinn = "0.11.6"
rcgen = { version = "0.13.2", features = ["x509-parser"] }
tokio = { workspace = true }
x509-parser = "0.16.0"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
